chore: all-opens since kotest can not manipulate the env variables otherwise